--- a/src/main/java/com/mycompany/interfaz/PanelConfig.form
+++ b/src/main/java/com/mycompany/interfaz/PanelConfig.form
@@ -91,6 +91,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Crear Dispositivo Cliente"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnClientFiskalyActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="0" gridY="5" gridWidth="1" gridHeight="1" fill="1" ipadX="0" ipadY="0" insetsTop="10" insetsLeft="0" insetsBottom="15" insetsRight="0" anchor="13" weightX="0.0" weightY="0.0"/>
@@ -187,7 +190,6 @@
         <Component class="javax.swing.JButton" name="btnEditUser">
           <Properties>
             <Property name="text" type="java.lang.String" value="Editar Usuario"/>
-            <Property name="actionCommand" type="java.lang.String" value="Editar Usuario"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
