Botón Datos Factura muestra el PDF guardado en BBDD

--- a/src/main/java/com/mycompany/interfaz/PanelFacturas.form
+++ b/src/main/java/com/mycompany/interfaz/PanelFacturas.form
@@ -77,7 +77,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="4">
                     <Column editable="true" title="N&#xba;" type="java.lang.Object"/>
-                    <Column editable="true" title="N&#xba; Cliente" type="java.lang.Object"/>
+                    <Column editable="true" title="Cliente" type="java.lang.Object"/>
                     <Column editable="true" title="Descripci&#xf3;n" type="java.lang.Object"/>
                     <Column editable="true" title="Estado" type="java.lang.Object"/>
                     <Column editable="true" title="Total Factura" type="java.lang.Object"/>
@@ -171,6 +171,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Datos Factura"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInvoiceDetailsActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="0" gridY="2" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="10" insetsLeft="20" insetsBottom="10" insetsRight="10" anchor="11" weightX="0.0" weightY="0.0"/>
