--- a/src/main/java/com/mycompany/interfaz/PanelFacturas.form
+++ b/src/main/java/com/mycompany/interfaz/PanelFacturas.form
@@ -184,6 +184,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Verificar AEAT"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVerifyAEATActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="0" gridY="3" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="10" insetsLeft="20" insetsBottom="10" insetsRight="10" anchor="15" weightX="0.0" weightY="0.0"/>
